<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/splash_dest">
    <fragment
        android:id="@+id/splash_dest"
        android:name="com.example.androidapptemplate.features.splash.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/go_to_home_action"
            app:destination="@id/home_dest"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@+id/main_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/go_to_login_action"
            app:destination="@id/login_dest"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@+id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/login_dest"
        android:name="com.example.androidapptemplate.features.login.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/go_to_home_action"
            app:destination="@id/home_dest"
            app:popUpTo="@+id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/home_dest"
        android:name="com.example.androidapptemplate.features.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/algorithm_top_dest"
        android:name="com.example.androidapptemplate.features.algorithm.AlgorithmTopFragment"
        android:label="@string/algorithm"
        tools:layout="@layout/algorithm_top_fragment" />

    <fragment
        android:id="@+id/web_api_top_dest"
        android:name="com.example.androidapptemplate.features.webapi.WebApiTopFragment"
        android:label="@string/web_api"
        tools:layout="@layout/web_api_top_fragment" />

    <fragment
        android:id="@+id/google_api_top_dest"
        android:name="com.example.androidapptemplate.features.googleapi.GoogleApiTopFragment"
        android:label="@string/google_api"
        tools:layout="@layout/google_api_top_fragment" />
</navigation>